Added Google Sheets support

--- a/config/init.ini
+++ b/config/init.ini
@@ -1,8 +1,8 @@
 [Telegram]
-BOT_TOKEN = <token here>
+BOT_TOKEN = 5626209045:AAG27KwOnm2AktCKxIQdtgNHVTObQQPQz2g
 
 [Google]
-DRIVE_TOKEN = <token here>
+ADMIN_EMAIL = <email here>
 
 [Application]
 FILE_PATH = ./attendance
